--- a/assets/translations/fr_FR.json
+++ b/assets/translations/fr_FR.json
@@ -80,6 +80,7 @@
   "PLAY_NOW": "Lire maintenant",
   "RECOMMENDATIONS": "Recommendations",
   "REFRESH": "ACTUALISER",
+  "REINDEX": "Reindex",
   "REMOVE": "SUPPRIMER",
   "RETRIEVING_INFO": "Recuperation d'info",
   "RETRIEVING_LINK": "Recuperation stream",
