--- a/assets/translations/hi_IN.json
+++ b/assets/translations/hi_IN.json
@@ -80,6 +80,7 @@
   "PLAY_NOW": "अभी गाना बजाएं",
   "RECOMMENDATIONS": "अनुशंसित",
   "REFRESH": "रिफ्रेश",
+  "REINDEX": "Reindex",
   "REMOVE": "हटाये",
   "RETRIEVING_INFO": "जानकारी पुनः प्राप्त कि जा रही है",
   "RETRIEVING_LINK": "स्ट्रीम पुनः प्राप्त कि जा रही है",
