--- a/assets/translations/hu_HU.json
+++ b/assets/translations/hu_HU.json
@@ -80,6 +80,7 @@
   "PLAY_NOW": "Lejátszás most",
   "RECOMMENDATIONS": "Ajánlott",
   "REFRESH": "FRISSÍTÉS",
+  "REINDEX": "Reindex",
   "REMOVE": "ELTÁVOLÍTÁS",
   "RETRIEVING_INFO": "Azonosítás...",
   "RETRIEVING_LINK": "Adatfolyam betöltése...",
