--- a/assets/translations/ja_JP.json
+++ b/assets/translations/ja_JP.json
@@ -80,6 +80,7 @@
   "PLAY_NOW": "今すぐ再生",
   "RECOMMENDATIONS": "おすすめ",
   "REFRESH": "リフレッシュ",
+  "REINDEX": "Reindex",
   "REMOVE": "削除",
   "RETRIEVING_INFO": "情報を取得中",
   "RETRIEVING_LINK": "ストリームを取得中",
