--- a/assets/translations/mg_MG.json
+++ b/assets/translations/mg_MG.json
@@ -80,6 +80,7 @@
   "PLAY_NOW": "Vakio izao",
   "RECOMMENDATIONS": "Tolo-kevitra",
   "REFRESH": "Havaozina",
+  "REINDEX": "Reindex",
   "REMOVE": "FAFANA",
   "RETRIEVING_INFO": "Recuperation d'info",
   "RETRIEVING_LINK": "Recuperation stream",
