--- a/assets/translations/nl_NL.json
+++ b/assets/translations/nl_NL.json
@@ -80,6 +80,7 @@
   "PLAY_NOW": "Nu afspelen",
   "RECOMMENDATIONS": "Aanbevelingen",
   "REFRESH": "HERLADEN",
+  "REINDEX": "Reindex",
   "REMOVE": "VERWIJDEREN",
   "RETRIEVING_INFO": "Info ophalen",
   "RETRIEVING_LINK": "Stream ophalen",
