--- a/assets/translations/pt_BR.json
+++ b/assets/translations/pt_BR.json
@@ -80,6 +80,7 @@
   "PLAY_NOW": "Play now",
   "RECOMMENDATIONS": "Recommendations",
   "REFRESH": "ATUALIZAR",
+  "REINDEX": "Reindex",
   "REMOVE": "REMOVE",
   "RETRIEVING_INFO": "Retrieving info",
   "RETRIEVING_LINK": "Retrieving stream",
