--- a/assets/translations/sl_SI.json
+++ b/assets/translations/sl_SI.json
@@ -80,6 +80,7 @@
   "PLAY_NOW": "Predvajaj zdaj",
   "RECOMMENDATIONS": "Priporočeno",
   "REFRESH": "OSVEŽI",
+  "REINDEX": "Reindex",
   "REMOVE": "ODSTRANI",
   "RETRIEVING_INFO": "Pridobivanje informacij o pesmi",
   "RETRIEVING_LINK": "Pridobivanje toka pesmi",
