--- a/assets/translations/sv_SE.json
+++ b/assets/translations/sv_SE.json
@@ -80,6 +80,7 @@
   "PLAY_NOW": "Spela nu",
   "RECOMMENDATIONS": "Rekommenderat",
   "REFRESH": "UPPDATERA",
+  "REINDEX": "Reindex",
   "REMOVE": "TA BORT",
   "RETRIEVING_INFO": "Hämtar info",
   "RETRIEVING_LINK": "Hämtar stream",
