--- a/assets/translations/zh_CN.json
+++ b/assets/translations/zh_CN.json
@@ -80,6 +80,7 @@
   "PLAY_NOW": "现在播放",
   "RECOMMENDATIONS": "推荐",
   "REFRESH": "刷新",
+  "REINDEX": "Reindex",
   "REMOVE": "移除",
   "RETRIEVING_INFO": "获取详情中",
   "RETRIEVING_LINK": "获取串流中",
