--- a/assets/translations/fr_FR.json
+++ b/assets/translations/fr_FR.json
@@ -25,7 +25,8 @@
   "COLLECTION_PLAYLIST_DELETE_DIALOG_BODY": "Voulez-vous supprimer cette playlist?",
   "COLLECTION_PLAYLIST_DELETE_DIALOG_HEADER": "Êtes-vous sûr?",
   "COLLECTION_SEARCH_LABEL": "recherche dans votre collection",
-  "COLLECTION_SEARCH_NO_RESULTS": "Rien de tel n'a pu être trouvé dans votre collection",
+  "COLLECTION_SEARCH_NO_RESULTS_SUBTITLE": "Rien de tel n'a pu être trouvé dans votre collection",
+  "COLLECTION_SEARCH_NO_RESULTS_TITLE": "No Results",
   "COLLECTION_SEARCH_WELCOME": "Entrez quelque chose à rechercher dans votre collection",
   "COLLECTION_TOP_BODY_ALBUM_EMPTY": "Recherchez et enregistrez de la musique pour la voir ici.\nActualisez-la pour voir de nouvelles choses.",
   "COLLECTION_TOP_SUBHEADER_ALBUM": "Dernier album",
@@ -35,6 +36,9 @@
   "COLLECTION_TRACK_DELETE_DIALOG_BODY": "Voulez-vous supprimer cette piste enregistrée sur votre appareil?",
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Êtes-vous sûr?",
   "COMING_UP": "à venir",
+  "CREATE": "Create",
+  "CREATE_NEW_PLAYLIST": "CREATE NEW PLAYLIST",
+  "CREATE_PLAYLIST_SUBHEADER": "Create a new playlist to add your music",
   "DATE_ADDED": "Date ajouté",
   "DELETE": "Supprimer",
   "DELETE_TRACK": "Supprimer la piste",
@@ -45,6 +49,7 @@
   "ENABLE_ACRYLIC_BLUR": "Acriver Windows acrylic blur.",
   "EXIT_SUBTITLE": "Voulez-vous quitter Harmonoid?",
   "EXIT_TITLE": "Quitter",
+  "GO_TO_SETTINGS": "GO TO SETTINGS",
   "INTERNET_ERROR": "Vérifier votre connexion Internet.",
   "KNOW_MORE": "KNOW MORE",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "Au moins un dosser doit rester dans votre collection.",
@@ -65,13 +70,15 @@
   "NO_DOWNLOAD_UPDATE": "Votre application est déjà mise à jour",
   "NO_INTERNET_SUBTITLE": "Vérifiez votre connexion.",
   "NO_INTERNET_TITLE": "Pas d'internet",
+  "NO_PLAYLISTS_FOUND": "No playlists found.\nCreate some to see them there.",
+  "N_TRACKS": "N tracks",
   "OK": "OK",
   "OPTIONS": "Options",
   "PAUSE": "Pause",
   "PLAY": "Lire",
   "PLAYLIST": "Playlists",
   "PLAYLISTS_CREATE": "Créer un nouveau playlist",
-  "PLAYLISTS_SUBHEADER": "Votre playlists",
+  "PLAYLISTS_SUBHEADER": "Playlists available on your device",
   "PLAYLISTS_TEXT_FIELD_HINT": "Nom pour votre nouveau playlist",
   "PLAYLISTS_TEXT_FIELD_LABEL": "Nom du Playlist",
   "PLAYLIST_ADD_DIALOG_BODY": "Sélectionnez une playlist pour ajouter cette piste",
@@ -82,6 +89,7 @@
   "REFRESH": "ACTUALISER",
   "REINDEX": "Reindex",
   "REMOVE": "SUPPRIMER",
+  "REMOVE_FROM_PLAYLIST": "Remove from playlist",
   "RETRIEVING_INFO": "Recuperation d'info",
   "RETRIEVING_LINK": "Recuperation stream",
   "SAVE_TO_DOWNLOADS": "Enregistrer dans les téléchargements",
