--- a/assets/translations/hi_IN.json
+++ b/assets/translations/hi_IN.json
@@ -25,7 +25,8 @@
   "COLLECTION_PLAYLIST_DELETE_DIALOG_BODY": "क्या आप इस प्लेलिस्ट को डिलीट करना चाहते हैं?",
   "COLLECTION_PLAYLIST_DELETE_DIALOG_HEADER": "डिलीट?",
   "COLLECTION_SEARCH_LABEL": "आपके कलेक्शन में खोजें",
-  "COLLECTION_SEARCH_NO_RESULTS": "ऐसा कुछ भी नहीं मिला",
+  "COLLECTION_SEARCH_NO_RESULTS_SUBTITLE": "ऐसा कुछ भी नहीं मिला",
+  "COLLECTION_SEARCH_NO_RESULTS_TITLE": "No Results",
   "COLLECTION_SEARCH_WELCOME": "खोजने के लिए कुछ लिखें",
   "COLLECTION_TOP_BODY_ALBUM_EMPTY": "अपने पसंद के गानों को यहाँ सुनने के लिए, उन्हें ढूंढे व सेव करें।\nअपना कलेक्शन रिफ्रेश करने के लिए रिफ्रेश बटन दबायें।",
   "COLLECTION_TOP_SUBHEADER_ALBUM": "नयी एल्बम",
@@ -35,6 +36,9 @@
   "COLLECTION_TRACK_DELETE_DIALOG_BODY": "क्या आप इस गाने को डिलीट करना चाहते हैं?",
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "डिलीट",
   "COMING_UP": "अगला आनेवाला",
+  "CREATE": "Create",
+  "CREATE_NEW_PLAYLIST": "CREATE NEW PLAYLIST",
+  "CREATE_PLAYLIST_SUBHEADER": "Create a new playlist to add your music",
   "DATE_ADDED": "तिथि",
   "DELETE": "डिलीट",
   "DELETE_TRACK": "गाना डिलीट करें",
@@ -45,6 +49,7 @@
   "ENABLE_ACRYLIC_BLUR": "Enable Windows acrylic blur.",
   "EXIT_SUBTITLE": "क्या आप Harmonoid को छोड़ना चाहते हैं?",
   "EXIT_TITLE": "बंद",
+  "GO_TO_SETTINGS": "GO TO SETTINGS",
   "INTERNET_ERROR": "अपना इंटरनेट कनेक्शन चेक करें।",
   "KNOW_MORE": "KNOW MORE",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "आपके कलेक्शन में कम से कम एक फ़ोल्डर रहने की आवश्यकता है।",
@@ -65,13 +70,15 @@
   "NO_DOWNLOAD_UPDATE": "आपकी ऐप पहले से अपडेट है",
   "NO_INTERNET_SUBTITLE": "अपना कनेक्शन चेक करें।",
   "NO_INTERNET_TITLE": "इंटरनेट एरर",
+  "NO_PLAYLISTS_FOUND": "No playlists found.\nCreate some to see them there.",
+  "N_TRACKS": "N tracks",
   "OK": "ठीक",
   "OPTIONS": "विकल्प",
   "PAUSE": "रोकें",
   "PLAY": "बजाएं",
   "PLAYLIST": "Playlists",
   "PLAYLISTS_CREATE": "नयी प्लेलिस्ट बनायें",
-  "PLAYLISTS_SUBHEADER": "आपकी प्लेलिस्टें",
+  "PLAYLISTS_SUBHEADER": "Playlists available on your device",
   "PLAYLISTS_TEXT_FIELD_HINT": "प्लेलिस्ट का नाम",
   "PLAYLISTS_TEXT_FIELD_LABEL": "नाम",
   "PLAYLIST_ADD_DIALOG_BODY": "प्लेलिस्ट चुनें",
@@ -82,6 +89,7 @@
   "REFRESH": "रिफ्रेश",
   "REINDEX": "Reindex",
   "REMOVE": "हटाये",
+  "REMOVE_FROM_PLAYLIST": "Remove from playlist",
   "RETRIEVING_INFO": "जानकारी पुनः प्राप्त कि जा रही है",
   "RETRIEVING_LINK": "स्ट्रीम पुनः प्राप्त कि जा रही है",
   "SAVE_TO_DOWNLOADS": "डौन्लोडस में सेव करें",
