--- a/assets/translations/ja_JP.json
+++ b/assets/translations/ja_JP.json
@@ -25,7 +25,8 @@
   "COLLECTION_PLAYLIST_DELETE_DIALOG_BODY": "このプレイリストを削除しますか？",
   "COLLECTION_PLAYLIST_DELETE_DIALOG_HEADER": "削除しますか？",
   "COLLECTION_SEARCH_LABEL": "コレクションから検索",
-  "COLLECTION_SEARCH_NO_RESULTS": "コレクションからは見つかりませんでした",
+  "COLLECTION_SEARCH_NO_RESULTS_SUBTITLE": "コレクションからは見つかりませんでした",
+  "COLLECTION_SEARCH_NO_RESULTS_TITLE": "No Results",
   "COLLECTION_SEARCH_WELCOME": "アルバムとトラック、アーティストを検索...",
   "COLLECTION_TOP_BODY_ALBUM_EMPTY": "検索して保存した音楽はここに表示されます。\n更新ボタンをタップすると新しい曲を表示します。",
   "COLLECTION_TOP_SUBHEADER_ALBUM": "最新のアルバム",
@@ -35,6 +36,9 @@
   "COLLECTION_TRACK_DELETE_DIALOG_BODY": "端末に保存されているトラックを削除しますか？",
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "削除しますか？",
   "COMING_UP": "開発中",
+  "CREATE": "Create",
+  "CREATE_NEW_PLAYLIST": "CREATE NEW PLAYLIST",
+  "CREATE_PLAYLIST_SUBHEADER": "Create a new playlist to add your music",
   "DATE_ADDED": "追加日時",
   "DELETE": "削除",
   "DELETE_TRACK": "トラックを削除",
@@ -45,6 +49,7 @@
   "ENABLE_ACRYLIC_BLUR": "Windows acrylic blurを有効化",
   "EXIT_SUBTITLE": "アプリを終了しますか？",
   "EXIT_TITLE": "終了",
+  "GO_TO_SETTINGS": "GO TO SETTINGS",
   "INTERNET_ERROR": "インターネット接続を確認してください。",
   "KNOW_MORE": "もっと見る",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "コレクションには1つ以上のフォルダを残しておく必要があります。",
@@ -65,13 +70,15 @@
   "NO_DOWNLOAD_UPDATE": "すでに最新版です",
   "NO_INTERNET_SUBTITLE": "接続を確認してください。",
   "NO_INTERNET_TITLE": "インターネットに接続されていません",
+  "NO_PLAYLISTS_FOUND": "No playlists found.\nCreate some to see them there.",
+  "N_TRACKS": "N tracks",
   "OK": "OK",
   "OPTIONS": "オプション",
   "PAUSE": "一時停止",
   "PLAY": "再生",
   "PLAYLIST": "Playlists",
   "PLAYLISTS_CREATE": "新しいプレイリストを作成",
-  "PLAYLISTS_SUBHEADER": "あなたのプレイリスト",
+  "PLAYLISTS_SUBHEADER": "Playlists available on your device",
   "PLAYLISTS_TEXT_FIELD_HINT": "新しいプレイリストの名前",
   "PLAYLISTS_TEXT_FIELD_LABEL": "プレイリスト名",
   "PLAYLIST_ADD_DIALOG_BODY": "このトラックを追加するプレイリストを選択してください",
@@ -82,6 +89,7 @@
   "REFRESH": "リフレッシュ",
   "REINDEX": "Reindex",
   "REMOVE": "削除",
+  "REMOVE_FROM_PLAYLIST": "Remove from playlist",
   "RETRIEVING_INFO": "情報を取得中",
   "RETRIEVING_LINK": "ストリームを取得中",
   "SAVE_TO_DOWNLOADS": "ダウンロードに保存",
