--- a/assets/translations/mg_MG.json
+++ b/assets/translations/mg_MG.json
@@ -25,7 +25,8 @@
   "COLLECTION_PLAYLIST_DELETE_DIALOG_BODY": "Te hamafa an'ity filaharan-kira ity ve ianao?",
   "COLLECTION_PLAYLIST_DELETE_DIALOG_HEADER": "Azonao antoka ve izany ?",
   "COLLECTION_SEARCH_LABEL": "karohy ao amin'ny fanangonana anao",
-  "COLLECTION_SEARCH_NO_RESULTS": "Tsy misy zavatra toy izany hita ao amin'ny fanangonana anao.",
+  "COLLECTION_SEARCH_NO_RESULTS_SUBTITLE": "Tsy misy zavatra toy izany hita ao amin'ny fanangonana anao.",
+  "COLLECTION_SEARCH_NO_RESULTS_TITLE": "No Results",
   "COLLECTION_SEARCH_WELCOME": "Mampidira zavatra ho karohana ao amin'ny fanangonana anao",
   "COLLECTION_TOP_BODY_ALBUM_EMPTY": "Mitadiava sy tehirizo mozika mba hijerena azy eto.\n Havaozina mba hahita zava-baovao.",
   "COLLECTION_TOP_SUBHEADER_ALBUM": "Rakikira farany",
@@ -35,6 +36,9 @@
   "COLLECTION_TRACK_DELETE_DIALOG_BODY": "Te hamafa ity mozika voatahiry ao amin'ny fitaovanao ity ve ianao?",
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Azonao antoka ve izany ?",
   "COMING_UP": "Hoavy",
+  "CREATE": "Create",
+  "CREATE_NEW_PLAYLIST": "CREATE NEW PLAYLIST",
+  "CREATE_PLAYLIST_SUBHEADER": "Create a new playlist to add your music",
   "DATE_ADDED": "Nanampy daty",
   "DELETE": "Fafana",
   "DELETE_TRACK": "Fafana ilay piste",
@@ -45,6 +49,7 @@
   "ENABLE_ACRYLIC_BLUR": "Ampandehano ny 'Windows acrylic blur'.",
   "EXIT_SUBTITLE": "Te hiala amin'ny Harmonoid ve ianao?",
   "EXIT_TITLE": "Miala",
+  "GO_TO_SETTINGS": "GO TO SETTINGS",
   "INTERNET_ERROR": "Hamarino ny fifandraisana Internet anao.",
   "KNOW_MORE": "KNOW MORE",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "Farafahakeliny rakitra iray tsy maintsy mijanona ao amin'ny fanangonana.",
@@ -65,13 +70,15 @@
   "NO_DOWNLOAD_UPDATE": "Efa navaozina ny fampiharana anao",
   "NO_INTERNET_SUBTITLE": "Zahao ny fifandraisanao.",
   "NO_INTERNET_TITLE": "Tsy misy Internet",
+  "NO_PLAYLISTS_FOUND": "No playlists found.\nCreate some to see them there.",
+  "N_TRACKS": "N tracks",
   "OK": "OK",
   "OPTIONS": "Safidy",
   "PAUSE": "miato kely",
   "PLAY": "Vakio",
   "PLAYLIST": "Playlists",
   "PLAYLISTS_CREATE": "Mamorona filaharan-kira vaovao",
-  "PLAYLISTS_SUBHEADER": "Ny filaharan-kiranao",
+  "PLAYLISTS_SUBHEADER": "Playlists available on your device",
   "PLAYLISTS_TEXT_FIELD_HINT": "Anaran'ilay filaharan-kiranao",
   "PLAYLISTS_TEXT_FIELD_LABEL": "Anaran'ilay filaharan-kira",
   "PLAYLIST_ADD_DIALOG_BODY": "Misafidiana filaharan-kira ampidirana ity mozika ity",
@@ -82,6 +89,7 @@
   "REFRESH": "Havaozina",
   "REINDEX": "Reindex",
   "REMOVE": "FAFANA",
+  "REMOVE_FROM_PLAYLIST": "Remove from playlist",
   "RETRIEVING_INFO": "Recuperation d'info",
   "RETRIEVING_LINK": "Recuperation stream",
   "SAVE_TO_DOWNLOADS": "Tehirizo amin'ny fisintomana",
