--- a/assets/translations/nl_NL.json
+++ b/assets/translations/nl_NL.json
@@ -25,7 +25,8 @@
   "COLLECTION_PLAYLIST_DELETE_DIALOG_BODY": "Wilt u deze afspeellijst van uw apparaat verwijderen?",
   "COLLECTION_PLAYLIST_DELETE_DIALOG_HEADER": "Weet u het zeker?",
   "COLLECTION_SEARCH_LABEL": "Zoek in je collectie",
-  "COLLECTION_SEARCH_NO_RESULTS": "Dat kon niet in uw collectie gevonden worden",
+  "COLLECTION_SEARCH_NO_RESULTS_SUBTITLE": "Dat kon niet in uw collectie gevonden worden",
+  "COLLECTION_SEARCH_NO_RESULTS_TITLE": "No Results",
   "COLLECTION_SEARCH_WELCOME": "Voer iets in om uw collectie te doorzoeken",
   "COLLECTION_TOP_BODY_ALBUM_EMPTY": "Zoek- en sla muziek op om het hier te zien. Klik op vernieuwen om nieuwe dingen te zien.",
   "COLLECTION_TOP_SUBHEADER_ALBUM": "Vorige album",
@@ -35,6 +36,9 @@
   "COLLECTION_TRACK_DELETE_DIALOG_BODY": "Wilt u dit album van uw apparaat verwijderen?",
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Weet u dat zeker?",
   "COMING_UP": "Volgende",
+  "CREATE": "Create",
+  "CREATE_NEW_PLAYLIST": "CREATE NEW PLAYLIST",
+  "CREATE_PLAYLIST_SUBHEADER": "Create a new playlist to add your music",
   "DATE_ADDED": "Datum Toegevoegd",
   "DELETE": "Verwijderen",
   "DELETE_TRACK": "Verwijder nummer",
@@ -45,6 +49,7 @@
   "ENABLE_ACRYLIC_BLUR": "Windows Acrylvervaging inschakelen",
   "EXIT_SUBTITLE": "Wilt u Harmonoid afsluiten?",
   "EXIT_TITLE": "Afsluiten",
+  "GO_TO_SETTINGS": "GO TO SETTINGS",
   "INTERNET_ERROR": "Controleer uw internet verbinding...",
   "KNOW_MORE": "KNOW MORE",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "Er moet ten minste één map in uw collectie blijven.",
@@ -65,13 +70,15 @@
   "NO_DOWNLOAD_UPDATE": "Uw app is al geupdate",
   "NO_INTERNET_SUBTITLE": "Controleer uw verbinding",
   "NO_INTERNET_TITLE": "Geen Internet",
+  "NO_PLAYLISTS_FOUND": "No playlists found.\nCreate some to see them there.",
+  "N_TRACKS": "N tracks",
   "OK": "OKÉ",
   "OPTIONS": "Opties",
   "PAUSE": "Pauze",
   "PLAY": "Afspelen",
   "PLAYLIST": "Playlists",
   "PLAYLISTS_CREATE": "Maak een nieuwe afspeellijst",
-  "PLAYLISTS_SUBHEADER": "Jouw afspeellijsten",
+  "PLAYLISTS_SUBHEADER": "Playlists available on your device",
   "PLAYLISTS_TEXT_FIELD_HINT": "Naam voor uw nieuwe afspeellijst",
   "PLAYLISTS_TEXT_FIELD_LABEL": "Naam afspeellijst",
   "PLAYLIST_ADD_DIALOG_BODY": "Selecteer een afspeellijst en voeg dit nummer toe",
@@ -82,6 +89,7 @@
   "REFRESH": "HERLADEN",
   "REINDEX": "Reindex",
   "REMOVE": "VERWIJDEREN",
+  "REMOVE_FROM_PLAYLIST": "Remove from playlist",
   "RETRIEVING_INFO": "Info ophalen",
   "RETRIEVING_LINK": "Stream ophalen",
   "SAVE_TO_DOWNLOADS": "Sla op in downloads",
