--- a/assets/translations/pt_BR.json
+++ b/assets/translations/pt_BR.json
@@ -25,7 +25,8 @@
   "COLLECTION_PLAYLIST_DELETE_DIALOG_BODY": "Você quer remover essa playlist salva no seu dispositivo?",
   "COLLECTION_PLAYLIST_DELETE_DIALOG_HEADER": "Tem certeza?",
   "COLLECTION_SEARCH_LABEL": "Lookup in your collection",
-  "COLLECTION_SEARCH_NO_RESULTS": "Nada parecido pôde ser encontrado em sua coleção",
+  "COLLECTION_SEARCH_NO_RESULTS_SUBTITLE": "Nada parecido pôde ser encontrado em sua coleção",
+  "COLLECTION_SEARCH_NO_RESULTS_TITLE": "No Results",
   "COLLECTION_SEARCH_WELCOME": "Adicione algo para pesquisar na sua coleção",
   "COLLECTION_TOP_BODY_ALBUM_EMPTY": "Procure & salve algumas músicas para vê-las aqui.\nGire para atualizar e ver as novidades.",
   "COLLECTION_TOP_SUBHEADER_ALBUM": "Aqui está o último álbum que você salvou",
@@ -35,6 +36,9 @@
   "COLLECTION_TRACK_DELETE_DIALOG_BODY": "Você quer apagar essa música do dispositivo?",
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Você que apagar?",
   "COMING_UP": "Coming Up",
+  "CREATE": "Create",
+  "CREATE_NEW_PLAYLIST": "CREATE NEW PLAYLIST",
+  "CREATE_PLAYLIST_SUBHEADER": "Create a new playlist to add your music",
   "DATE_ADDED": "Data adicionada",
   "DELETE": "Deletar",
   "DELETE_TRACK": "Deletar música",
@@ -45,6 +49,7 @@
   "ENABLE_ACRYLIC_BLUR": "Enable Windows acrylic blur.",
   "EXIT_SUBTITLE": "Você quer nos deixar?",
   "EXIT_TITLE": "Sair",
+  "GO_TO_SETTINGS": "GO TO SETTINGS",
   "INTERNET_ERROR": "Verifique sua conexão com a internet...",
   "KNOW_MORE": "KNOW MORE",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "Atleast one folder needs to stay in your collection.",
@@ -65,13 +70,15 @@
   "NO_DOWNLOAD_UPDATE": "Seu aplicativo já está atualizado",
   "NO_INTERNET_SUBTITLE": "Verifique sua conexão.",
   "NO_INTERNET_TITLE": "Sem internet",
+  "NO_PLAYLISTS_FOUND": "No playlists found.\nCreate some to see them there.",
+  "N_TRACKS": "N tracks",
   "OK": "OK",
   "OPTIONS": "Opções",
   "PAUSE": "Pausar",
   "PLAY": "Tocar",
   "PLAYLIST": "Playlists",
   "PLAYLISTS_CREATE": "Criar uma nova playlist",
-  "PLAYLISTS_SUBHEADER": "Playlists criadas por você",
+  "PLAYLISTS_SUBHEADER": "Playlists available on your device",
   "PLAYLISTS_TEXT_FIELD_HINT": "Dê um nome para sua nova playlist",
   "PLAYLISTS_TEXT_FIELD_LABEL": "Nome da Playlist",
   "PLAYLIST_ADD_DIALOG_BODY": "Selecione uma playlist para adicionar essa música",
@@ -82,6 +89,7 @@
   "REFRESH": "ATUALIZAR",
   "REINDEX": "Reindex",
   "REMOVE": "REMOVE",
+  "REMOVE_FROM_PLAYLIST": "Remove from playlist",
   "RETRIEVING_INFO": "Retrieving info",
   "RETRIEVING_LINK": "Retrieving stream",
   "SAVE_TO_DOWNLOADS": "Salvar nos downloads",
@@ -139,7 +147,7 @@
   "YEAR": "Year",
   "YES": "SIM",
   "YOUTUBE": "YouTube",
-  "YOUTUBE_INTERNET_ERROR": "Let's play your local music, while you get back online.",
+  "YOUTUBE_INTERNET_ERROR": "Let's play your local music, while you get back online..",
   "YOUTUBE_NO_RESULTS": "Nothing like that could be found.",
   "YOUTUBE_WELCOME": "Search for music or give a link"
 }
