--- a/assets/translations/ru_RU.json
+++ b/assets/translations/ru_RU.json
@@ -25,7 +25,8 @@
   "COLLECTION_PLAYLIST_DELETE_DIALOG_BODY": "Хотите удалить плейлист?",
   "COLLECTION_PLAYLIST_DELETE_DIALOG_HEADER": "Вы уверены?",
   "COLLECTION_SEARCH_LABEL": "Lookup in your collection",
-  "COLLECTION_SEARCH_NO_RESULTS": "В коллекции ничего не найдено",
+  "COLLECTION_SEARCH_NO_RESULTS_SUBTITLE": "В коллекции ничего не найдено",
+  "COLLECTION_SEARCH_NO_RESULTS_TITLE": "No Results",
   "COLLECTION_SEARCH_WELCOME": "Поиск среди загруженных треков",
   "COLLECTION_TOP_BODY_ALBUM_EMPTY": "Ищите и сохраняйте музыку, чтобы увидеть её здесь.",
   "COLLECTION_TOP_SUBHEADER_ALBUM": "Последний сохранённый альбом",
@@ -35,6 +36,9 @@
   "COLLECTION_TRACK_DELETE_DIALOG_BODY": "Вы действительно хотите удалить сохранённый трек?",
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Удалить трек",
   "COMING_UP": "Coming Up",
+  "CREATE": "Create",
+  "CREATE_NEW_PLAYLIST": "CREATE NEW PLAYLIST",
+  "CREATE_PLAYLIST_SUBHEADER": "Create a new playlist to add your music",
   "DATE_ADDED": "По дате добавления",
   "DELETE": "Удалить",
   "DELETE_TRACK": "Удалить трек",
@@ -45,6 +49,7 @@
   "ENABLE_ACRYLIC_BLUR": "Enable Windows acrylic blur.",
   "EXIT_SUBTITLE": "Хотите выйти?",
   "EXIT_TITLE": "Выход",
+  "GO_TO_SETTINGS": "GO TO SETTINGS",
   "INTERNET_ERROR": "Проверьте интернет-соединение.",
   "KNOW_MORE": "KNOW MORE",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "Atleast one folder needs to stay in your collection.",
@@ -65,13 +70,15 @@
   "NO_DOWNLOAD_UPDATE": "Установлена последняя версия",
   "NO_INTERNET_SUBTITLE": "Проверьте подключение.",
   "NO_INTERNET_TITLE": "Нет доступа в Интернет",
+  "NO_PLAYLISTS_FOUND": "No playlists found.\nCreate some to see them there.",
+  "N_TRACKS": "N tracks",
   "OK": "ОК",
   "OPTIONS": "Параметры",
   "PAUSE": "Пауза",
   "PLAY": "Плей",
   "PLAYLIST": "Playlists",
   "PLAYLISTS_CREATE": "Создать плейлист",
-  "PLAYLISTS_SUBHEADER": "Ваши плейлисты",
+  "PLAYLISTS_SUBHEADER": "Playlists available on your device",
   "PLAYLISTS_TEXT_FIELD_HINT": "Назовите плейлист",
   "PLAYLISTS_TEXT_FIELD_LABEL": "Название",
   "PLAYLIST_ADD_DIALOG_BODY": "Выберите плейлист",
@@ -82,6 +89,7 @@
   "REFRESH": "ОБНОВИТЬ",
   "REINDEX": "Reindex",
   "REMOVE": "REMOVE",
+  "REMOVE_FROM_PLAYLIST": "Remove from playlist",
   "RETRIEVING_INFO": "Retrieving info",
   "RETRIEVING_LINK": "Retrieving stream",
   "SAVE_TO_DOWNLOADS": "Сохранить в \"Downloads\"",
@@ -139,7 +147,7 @@
   "YEAR": "Year",
   "YES": "ДА",
   "YOUTUBE": "YouTube",
-  "YOUTUBE_INTERNET_ERROR": "Let's play your local music, while you get back online.",
+  "YOUTUBE_INTERNET_ERROR": "Let's play your local music, while you get back online..",
   "YOUTUBE_NO_RESULTS": "Nothing like that could be found.",
   "YOUTUBE_WELCOME": "Search for music or give a link"
 }
