--- a/assets/translations/sl_SI.json
+++ b/assets/translations/sl_SI.json
@@ -25,7 +25,8 @@
   "COLLECTION_PLAYLIST_DELETE_DIALOG_BODY": "Ali hočeš odstraniti seznam predvajanja?",
   "COLLECTION_PLAYLIST_DELETE_DIALOG_HEADER": "Ali si prepričan?",
   "COLLECTION_SEARCH_LABEL": "Pogled v tvojo zbirko",
-  "COLLECTION_SEARCH_NO_RESULTS": "Nič nisem našel v tvoji kolekciji",
+  "COLLECTION_SEARCH_NO_RESULTS_SUBTITLE": "Nič nisem našel v tvoji kolekciji",
+  "COLLECTION_SEARCH_NO_RESULTS_TITLE": "No Results",
   "COLLECTION_SEARCH_WELCOME": "Vpiši nekaj za iskanje v tvoji kolekciji",
   "COLLECTION_TOP_BODY_ALBUM_EMPTY": "Poišči in shrani nekaj glasbe.\nZavrti osveži gumb, da se pokažejo nove pesmi.",
   "COLLECTION_TOP_SUBHEADER_ALBUM": "Tukaj je zadnji shranjeni avtor",
@@ -35,6 +36,9 @@
   "COLLECTION_TRACK_DELETE_DIALOG_BODY": "Ali res hočeš izbrisati to pesem?",
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Ali hočeš izbrisati to?",
   "COMING_UP": "Naslednje",
+  "CREATE": "Create",
+  "CREATE_NEW_PLAYLIST": "CREATE NEW PLAYLIST",
+  "CREATE_PLAYLIST_SUBHEADER": "Create a new playlist to add your music",
   "DATE_ADDED": "Po datumu prenosa",
   "DELETE": "Izbriši",
   "DELETE_TRACK": "Izbriši pesem",
@@ -45,6 +49,7 @@
   "ENABLE_ACRYLIC_BLUR": "Vključi Windows Acrylic blur.",
   "EXIT_SUBTITLE": "Ali res hočeš zapreti aplikacijo?",
   "EXIT_TITLE": "Izhod",
+  "GO_TO_SETTINGS": "GO TO SETTINGS",
   "INTERNET_ERROR": "Prosimo, preverite vašo internetno povezavo",
   "KNOW_MORE": "KNOW MORE",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "Vsaj en direktorij mora ostati v tvoji zbirki.",
@@ -65,13 +70,15 @@
   "NO_DOWNLOAD_UPDATE": "Aplikacija je že posodobljena.",
   "NO_INTERNET_SUBTITLE": "Preveri internetno povezavo",
   "NO_INTERNET_TITLE": "Ni interneta",
+  "NO_PLAYLISTS_FOUND": "No playlists found.\nCreate some to see them there.",
+  "N_TRACKS": "N tracks",
   "OK": "OK",
   "OPTIONS": "Opcije",
   "PAUSE": "Ustavi",
   "PLAY": "Predvajaj",
   "PLAYLIST": "Playlists",
   "PLAYLISTS_CREATE": "Ustvari seznam predvajanja",
-  "PLAYLISTS_SUBHEADER": "Tvoji seznami predvajanja",
+  "PLAYLISTS_SUBHEADER": "Playlists available on your device",
   "PLAYLISTS_TEXT_FIELD_HINT": "Ime za tvoj seznam predvajanja",
   "PLAYLISTS_TEXT_FIELD_LABEL": "Ime Seznama predvajanja",
   "PLAYLIST_ADD_DIALOG_BODY": "Izberi pesem za seznam predvajanja",
@@ -82,6 +89,7 @@
   "REFRESH": "OSVEŽI",
   "REINDEX": "Reindex",
   "REMOVE": "ODSTRANI",
+  "REMOVE_FROM_PLAYLIST": "Remove from playlist",
   "RETRIEVING_INFO": "Pridobivanje informacij o pesmi",
   "RETRIEVING_LINK": "Pridobivanje toka pesmi",
   "SAVE_TO_DOWNLOADS": "Shrani med prenose",
