--- a/assets/translations/sv_SE.json
+++ b/assets/translations/sv_SE.json
@@ -25,7 +25,8 @@
   "COLLECTION_PLAYLIST_DELETE_DIALOG_BODY": "Vill du radera denna spellista?",
   "COLLECTION_PLAYLIST_DELETE_DIALOG_HEADER": "Är du säker?",
   "COLLECTION_SEARCH_LABEL": "Leta i din samling",
-  "COLLECTION_SEARCH_NO_RESULTS": "Inget sådant fanns i din samling",
+  "COLLECTION_SEARCH_NO_RESULTS_SUBTITLE": "Inget sådant fanns i din samling",
+  "COLLECTION_SEARCH_NO_RESULTS_TITLE": "No Results",
   "COLLECTION_SEARCH_WELCOME": "Skriv något för att söka i din samling",
   "COLLECTION_TOP_BODY_ALBUM_EMPTY": "Sök & spara musik för att se här.\nSnurra på uppdatera för att se nya saker.",
   "COLLECTION_TOP_SUBHEADER_ALBUM": "Senaste album",
@@ -35,6 +36,9 @@
   "COLLECTION_TRACK_DELETE_DIALOG_BODY": "Vill du avlägsna denna låt sparad på din enhet?",
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Är du säker?",
   "COMING_UP": "Coming Up",
+  "CREATE": "Create",
+  "CREATE_NEW_PLAYLIST": "CREATE NEW PLAYLIST",
+  "CREATE_PLAYLIST_SUBHEADER": "Create a new playlist to add your music",
   "DATE_ADDED": "Datum tillagd",
   "DELETE": "Radera",
   "DELETE_TRACK": "Radera låt",
@@ -45,6 +49,7 @@
   "ENABLE_ACRYLIC_BLUR": "Aktivera Windows akryl suddighet.",
   "EXIT_SUBTITLE": "Vill du avsluta Harmonoid?",
   "EXIT_TITLE": "Avsluta",
+  "GO_TO_SETTINGS": "GO TO SETTINGS",
   "INTERNET_ERROR": "Granska din internetanslutning.",
   "KNOW_MORE": "KNOW MORE",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "Atleast one folder needs to stay in your collection.",
@@ -65,13 +70,15 @@
   "NO_DOWNLOAD_UPDATE": "Din applikation är redan uppdaterad",
   "NO_INTERNET_SUBTITLE": "Granska din anslutning.",
   "NO_INTERNET_TITLE": "Inget internet",
+  "NO_PLAYLISTS_FOUND": "No playlists found.\nCreate some to see them there.",
+  "N_TRACKS": "N tracks",
   "OK": "OKEJ",
   "OPTIONS": "Val",
   "PAUSE": "Paus",
   "PLAY": "Spela",
   "PLAYLIST": "Playlists",
   "PLAYLISTS_CREATE": "Skapa ny spellista",
-  "PLAYLISTS_SUBHEADER": "Dina spellistor",
+  "PLAYLISTS_SUBHEADER": "Playlists available on your device",
   "PLAYLISTS_TEXT_FIELD_HINT": "Namn för din nya spellista",
   "PLAYLISTS_TEXT_FIELD_LABEL": "Spellistans namn",
   "PLAYLIST_ADD_DIALOG_BODY": "Välj en spellista för att lägga till denna låt",
@@ -82,6 +89,7 @@
   "REFRESH": "UPPDATERA",
   "REINDEX": "Reindex",
   "REMOVE": "TA BORT",
+  "REMOVE_FROM_PLAYLIST": "Remove from playlist",
   "RETRIEVING_INFO": "Hämtar info",
   "RETRIEVING_LINK": "Hämtar stream",
   "SAVE_TO_DOWNLOADS": "Spara i nerladdningar",
