--- a/assets/translations/zh_CN.json
+++ b/assets/translations/zh_CN.json
@@ -25,7 +25,8 @@
   "COLLECTION_PLAYLIST_DELETE_DIALOG_BODY": "您确定删除该播放列表吗?",
   "COLLECTION_PLAYLIST_DELETE_DIALOG_HEADER": "您确定吗?",
   "COLLECTION_SEARCH_LABEL": "查找您的目录中",
-  "COLLECTION_SEARCH_NO_RESULTS": "在您的收藏夹中未搜到结果",
+  "COLLECTION_SEARCH_NO_RESULTS_SUBTITLE": "在您的收藏夹中未搜到结果",
+  "COLLECTION_SEARCH_NO_RESULTS_TITLE": "No Results",
   "COLLECTION_SEARCH_WELCOME": "从您的收藏中搜索",
   "COLLECTION_TOP_BODY_ALBUM_EMPTY": "搜索后保存的音乐将展示在这里。\n刷新查看最新。",
   "COLLECTION_TOP_SUBHEADER_ALBUM": "最新专辑",
@@ -35,6 +36,9 @@
   "COLLECTION_TRACK_DELETE_DIALOG_BODY": "您确定删除已经保存在您设备上的歌曲吗?",
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "您确定吗?",
   "COMING_UP": "开发中",
+  "CREATE": "Create",
+  "CREATE_NEW_PLAYLIST": "CREATE NEW PLAYLIST",
+  "CREATE_PLAYLIST_SUBHEADER": "Create a new playlist to add your music",
   "DATE_ADDED": "添加日期",
   "DELETE": "删除",
   "DELETE_TRACK": "删除歌曲",
@@ -45,6 +49,7 @@
   "ENABLE_ACRYLIC_BLUR": "开启 Windows 歌词模糊。",
   "EXIT_SUBTITLE": "您确定退出 Harmonoid 吗?",
   "EXIT_TITLE": "退出",
+  "GO_TO_SETTINGS": "GO TO SETTINGS",
   "INTERNET_ERROR": "检查您的网络连接。",
   "KNOW_MORE": "KNOW MORE",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "您的收藏中需要只是包括一个目录。",
@@ -65,13 +70,15 @@
   "NO_DOWNLOAD_UPDATE": "您的应用已是最新版本",
   "NO_INTERNET_SUBTITLE": "检查您的网络",
   "NO_INTERNET_TITLE": "无网络连接",
+  "NO_PLAYLISTS_FOUND": "No playlists found.\nCreate some to see them there.",
+  "N_TRACKS": "N tracks",
   "OK": "好的",
   "OPTIONS": "选项",
   "PAUSE": "暂停",
   "PLAY": "播放",
   "PLAYLIST": "Playlists",
   "PLAYLISTS_CREATE": "创建一个新播放列表",
-  "PLAYLISTS_SUBHEADER": "您的播放列表",
+  "PLAYLISTS_SUBHEADER": "Playlists available on your device",
   "PLAYLISTS_TEXT_FIELD_HINT": "请输入播放列表名",
   "PLAYLISTS_TEXT_FIELD_LABEL": "播放列表名",
   "PLAYLIST_ADD_DIALOG_BODY": "选择播放列表添加歌曲",
@@ -82,6 +89,7 @@
   "REFRESH": "刷新",
   "REINDEX": "Reindex",
   "REMOVE": "移除",
+  "REMOVE_FROM_PLAYLIST": "Remove from playlist",
   "RETRIEVING_INFO": "获取详情中",
   "RETRIEVING_LINK": "获取串流中",
   "SAVE_TO_DOWNLOADS": "保存到下载列表",
