--- a/assets/translations/de_DE.json
+++ b/assets/translations/de_DE.json
@@ -25,7 +25,8 @@
   "COLLECTION_PLAYLIST_DELETE_DIALOG_BODY": "Do you want to remove this playlist saved on your device?",
   "COLLECTION_PLAYLIST_DELETE_DIALOG_HEADER": "Are you sure?",
   "COLLECTION_SEARCH_LABEL": "Lookup in your collection",
-  "COLLECTION_SEARCH_NO_RESULTS": "Nothing like that could be found in your collection",
+  "COLLECTION_SEARCH_NO_RESULTS_SUBTITLE": "Nothing like that could be found in your collection",
+  "COLLECTION_SEARCH_NO_RESULTS_TITLE": "No Results",
   "COLLECTION_SEARCH_WELCOME": "Enter something to search in your collection",
   "COLLECTION_TOP_BODY_ALBUM_EMPTY": "Suche & speichere etwas Musik, um sie hier zu sehen.\nDrehe den Aktualisierungsbutton, um neue Sachen zu sehen",
   "COLLECTION_TOP_SUBHEADER_ALBUM": "Hier ist das letzte von Ihnen gespeicherte Album",
@@ -35,6 +36,9 @@
   "COLLECTION_TRACK_DELETE_DIALOG_BODY": "Möchten Sie diesen auf Ihrem Gerät gespeicherten Song entfernen?",
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Wollen Sie diesen Song löschen?",
   "COMING_UP": "Coming Up",
+  "CREATE": "Create",
+  "CREATE_NEW_PLAYLIST": "CREATE NEW PLAYLIST",
+  "CREATE_PLAYLIST_SUBHEADER": "Create a new playlist to add your music",
   "DATE_ADDED": "Date Added",
   "DELETE": "Delete",
   "DELETE_TRACK": "Song löschen",
@@ -45,6 +49,7 @@
   "ENABLE_ACRYLIC_BLUR": "Enable Windows acrylic blur.",
   "EXIT_SUBTITLE": "Do you want to exit Harmonoid?",
   "EXIT_TITLE": "Exit",
+  "GO_TO_SETTINGS": "GO TO SETTINGS",
   "INTERNET_ERROR": "Überprüfen Sie Ihre Internetverbindung...",
   "KNOW_MORE": "KNOW MORE",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "Atleast one folder needs to stay in your collection.",
@@ -65,14 +70,16 @@
   "NO_DOWNLOAD_UPDATE": "Ihre App ist bereits aktuell.",
   "NO_INTERNET_SUBTITLE": "Check your connection.",
   "NO_INTERNET_TITLE": "No Internet",
+  "NO_PLAYLISTS_FOUND": "No playlists found.\nCreate some to see them there.",
+  "N_TRACKS": "N tracks",
   "OK": "OKAY",
   "OPTIONS": "Optionen",
   "PAUSE": "Pause",
   "PLAY": "Play",
   "PLAYLIST": "Playlists",
   "PLAYLISTS_CREATE": "Create a new playlist",
-  "PLAYLISTS_SUBHEADER": "Playlists created by you",
-  "PLAYLISTS_TEXT_FIELD_HINT": "Name for your new playlist",
+  "PLAYLISTS_SUBHEADER": "Playlists available on your device",
+  "PLAYLISTS_TEXT_FIELD_HINT": "Give a name to your new playlist...",
   "PLAYLISTS_TEXT_FIELD_LABEL": "Playlist Name",
   "PLAYLIST_ADD_DIALOG_BODY": "Select a playlist to add this track",
   "PLAYLIST_ADD_DIALOG_TITLE": "Add to playlist",
@@ -82,6 +89,7 @@
   "REFRESH": "REFRESH",
   "REINDEX": "Reindex",
   "REMOVE": "REMOVE",
+  "REMOVE_FROM_PLAYLIST": "Remove from playlist",
   "RETRIEVING_INFO": "Retrieving info",
   "RETRIEVING_LINK": "Retrieving stream",
   "SAVE_TO_DOWNLOADS": "Save to downloads",
@@ -139,7 +147,7 @@
   "YEAR": "Year",
   "YES": "JA",
   "YOUTUBE": "YouTube",
-  "YOUTUBE_INTERNET_ERROR": "Let's play your local music, while you get back online.",
+  "YOUTUBE_INTERNET_ERROR": "Let's play your local music, while you get back online..",
   "YOUTUBE_NO_RESULTS": "Nothing like that could be found.",
   "YOUTUBE_WELCOME": "Search for music or give a link"
 }
