--- a/assets/translations/en_US.json
+++ b/assets/translations/en_US.json
@@ -25,7 +25,8 @@
   "COLLECTION_PLAYLIST_DELETE_DIALOG_BODY": "Delete the playlist \"NAME\"?",
   "COLLECTION_PLAYLIST_DELETE_DIALOG_HEADER": "Delete",
   "COLLECTION_SEARCH_LABEL": "Lookup in your collection",
-  "COLLECTION_SEARCH_NO_RESULTS": "Nothing like that could be found in your collection",
+  "COLLECTION_SEARCH_NO_RESULTS_SUBTITLE": "Nothing like that could be found in your collection",
+  "COLLECTION_SEARCH_NO_RESULTS_TITLE": "No Results",
   "COLLECTION_SEARCH_WELCOME": "Search albums, tracks or artists...",
   "COLLECTION_TOP_BODY_ALBUM_EMPTY": "Search & save some music to see it here.\nSpin the refresh to see new stuff.",
   "COLLECTION_TOP_SUBHEADER_ALBUM": "Latest album",
@@ -35,6 +36,9 @@
   "COLLECTION_TRACK_DELETE_DIALOG_BODY": "Delete the track \"NAME\"?",
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Delete",
   "COMING_UP": "Coming Up",
+  "CREATE": "Create",
+  "CREATE_NEW_PLAYLIST": "CREATE NEW PLAYLIST",
+  "CREATE_PLAYLIST_SUBHEADER": "Create a new playlist to add your music",
   "DATE_ADDED": "Date added",
   "DELETE": "Delete",
   "DELETE_TRACK": "Delete track",
@@ -45,6 +49,7 @@
   "ENABLE_ACRYLIC_BLUR": "Enable Windows acrylic blur.",
   "EXIT_SUBTITLE": "Do you want to exit Harmonoid?",
   "EXIT_TITLE": "Exit",
+  "GO_TO_SETTINGS": "GO TO SETTINGS",
   "INTERNET_ERROR": "Check your internet connection.",
   "KNOW_MORE": "KNOW MORE",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "Atleast one folder needs to stay in your collection.",
@@ -61,18 +66,20 @@
   "NOW_PLAYING_NOT_PLAYING_TITLE": "Nothing is being played",
   "NOW_PLAYING_PREVIOUS_TRACK": "PREVIOUS",
   "NO_COLLECTION_SUBTITLE": "No music found.\nChange where to look for the music from settings.",
-  "NO_COLLECTION_TITLE": "Empty collection",
+  "NO_COLLECTION_TITLE": "Empty Collection",
   "NO_DOWNLOAD_UPDATE": "Your app is already updated",
   "NO_INTERNET_SUBTITLE": "Check your connection.",
   "NO_INTERNET_TITLE": "No internet",
+  "NO_PLAYLISTS_FOUND": "No playlists found.\nCreate some to see them there.",
+  "N_TRACKS": "N tracks",
   "OK": "OKAY",
   "OPTIONS": "Options",
   "PAUSE": "Pause",
   "PLAY": "Play",
   "PLAYLIST": "Playlists",
   "PLAYLISTS_CREATE": "Create a new playlist",
-  "PLAYLISTS_SUBHEADER": "Your playlists",
-  "PLAYLISTS_TEXT_FIELD_HINT": "Name for your new playlist",
+  "PLAYLISTS_SUBHEADER": "Playlists available on your device",
+  "PLAYLISTS_TEXT_FIELD_HINT": "Give a name to your new playlist...",
   "PLAYLISTS_TEXT_FIELD_LABEL": "Playlist Name",
   "PLAYLIST_ADD_DIALOG_BODY": "Select a playlist to add this track",
   "PLAYLIST_ADD_DIALOG_TITLE": "Add to playlist",
@@ -82,6 +89,7 @@
   "REFRESH": "REFRESH",
   "REINDEX": "Reindex",
   "REMOVE": "REMOVE",
+  "REMOVE_FROM_PLAYLIST": "Remove from playlist",
   "RETRIEVING_INFO": "Retrieving info",
   "RETRIEVING_LINK": "Retrieving stream",
   "SAVE_TO_DOWNLOADS": "Save to downloads",
@@ -139,7 +147,7 @@
   "YEAR": "Year",
   "YES": "YES",
   "YOUTUBE": "YouTube",
-  "YOUTUBE_INTERNET_ERROR": "Let's play your local music, while you get back online",
+  "YOUTUBE_INTERNET_ERROR": "Let's play your local music, while you get back online.",
   "YOUTUBE_NO_RESULTS": "Nothing like that could be found",
   "YOUTUBE_WELCOME": "Search for music or give a link"
 }
