--- a/assets/translations/hu_HU.json
+++ b/assets/translations/hu_HU.json
@@ -25,7 +25,8 @@
   "COLLECTION_PLAYLIST_DELETE_DIALOG_BODY": "Törölni akarod ezt a lejátszási listát?",
   "COLLECTION_PLAYLIST_DELETE_DIALOG_HEADER": "Egészen biztos?",
   "COLLECTION_SEARCH_LABEL": "Keresés a gyűjteményedben",
-  "COLLECTION_SEARCH_NO_RESULTS": "Nincs találat a gyűjteményedben.",
+  "COLLECTION_SEARCH_NO_RESULTS_SUBTITLE": "Nincs találat a gyűjteményedben.",
+  "COLLECTION_SEARCH_NO_RESULTS_TITLE": "No Results",
   "COLLECTION_SEARCH_WELCOME": "Mit szeretnél hallgatni a gyűjteményedből?",
   "COLLECTION_TOP_BODY_ALBUM_EMPTY": "Keress és ments számokat, hogy itt megjelenjenek.\nFrissíts, hogy lásd az újdonságokat.",
   "COLLECTION_TOP_SUBHEADER_ALBUM": "Legújabb album",
@@ -35,6 +36,9 @@
   "COLLECTION_TRACK_DELETE_DIALOG_BODY": "Törölni akarod ezt a letöltött számot az eszközödről?",
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Egészen biztos?",
   "COMING_UP": "Coming Up",
+  "CREATE": "Create",
+  "CREATE_NEW_PLAYLIST": "CREATE NEW PLAYLIST",
+  "CREATE_PLAYLIST_SUBHEADER": "Create a new playlist to add your music",
   "DATE_ADDED": "Hozzáadás dátuma",
   "DELETE": "Törlés",
   "DELETE_TRACK": "Szám törlése",
@@ -45,6 +49,7 @@
   "ENABLE_ACRYLIC_BLUR": "Windows áttetsző háttér engedélyezése",
   "EXIT_SUBTITLE": "Biztosan kilépsz a Harmonoidból?",
   "EXIT_TITLE": "Kilépés",
+  "GO_TO_SETTINGS": "GO TO SETTINGS",
   "INTERNET_ERROR": "Nincs internetelérés.",
   "KNOW_MORE": "KNOW MORE",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "Atleast one folder needs to stay in your collection.",
@@ -65,13 +70,15 @@
   "NO_DOWNLOAD_UPDATE": "A legfrissebb verziót futtatod.",
   "NO_INTERNET_SUBTITLE": "Ellenőrizd az internetkapcsolatod.",
   "NO_INTERNET_TITLE": "Nincs internet",
+  "NO_PLAYLISTS_FOUND": "No playlists found.\nCreate some to see them there.",
+  "N_TRACKS": "N tracks",
   "OK": "OK",
   "OPTIONS": "Opciók",
   "PAUSE": "Szünet",
   "PLAY": "Lejátszás",
   "PLAYLIST": "Playlists",
   "PLAYLISTS_CREATE": "Lejátszási lista létrehozása",
-  "PLAYLISTS_SUBHEADER": "Lejátszási listáid",
+  "PLAYLISTS_SUBHEADER": "Playlists available on your device",
   "PLAYLISTS_TEXT_FIELD_HINT": "Adj nevet a listádnak",
   "PLAYLISTS_TEXT_FIELD_LABEL": "Lejátszási lista neve",
   "PLAYLIST_ADD_DIALOG_BODY": "Melyik listához akarod hozzáadni?",
@@ -82,6 +89,7 @@
   "REFRESH": "FRISSÍTÉS",
   "REINDEX": "Reindex",
   "REMOVE": "ELTÁVOLÍTÁS",
+  "REMOVE_FROM_PLAYLIST": "Remove from playlist",
   "RETRIEVING_INFO": "Azonosítás...",
   "RETRIEVING_LINK": "Adatfolyam betöltése...",
   "SAVE_TO_DOWNLOADS": "Mentés a letöltések közé",
